# check-in

./: .env.example  .gitignore  .travis.yml  LICENSE.rst  README.rst  setup.cfg  setup.py
.github/: FUNDING.yml
check_in/: __init__.py  __main__.py  cli.py  github_api.py  github_checks_requests.py
