[metadata]
name = check-in
url = https://github.com/webknjaz/check-in
project_urls = 
    CI: Travis = https://travis-ci.com/webknjaz/check-in
    GitHub: repo = https://github.com/webknjaz/check-in
    GitHub: issues = https://github.com/webknjaz/check-in/issues
author = Sviatoslav Sydorenko
author_email = wk+github-open-source@sydorenko.org.ua
description = CLI for publishing check runs info via GitHub Checks API
long_description = file: README.rst
license = MIT
license_file = LICENSE.rst
keywords =
    CLI
    tool
    API
    client
    GitHub
    Checks API
    CI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.6
install_requires =
    attrs
    click
    envparse
    pygithub[integrations]
include_package_data = True
packages = find:
package_dir = 
    = .

[options.entry_points]
console_scripts =
    check-in = check_in.cli:main

[bdist_wheel]
universal = 1
